--- a/hasnip.cabal
+++ b/hasnip.cabal
@@ -10,7 +10,7 @@ maintainer:          Ericson2314@Yahoo.com
 copyright:           2013
 category:            Game
 build-type:          Simple
-cabal-version:       >=1.8
+cabal-version:       >=1.10
 
 Test-suite hasnip-test
   default-language:  Haskell2010
@@ -18,17 +18,27 @@ Test-suite hasnip-test
   ghc-options:       -Wall
   main-is:           Main.hs
   hs-source-dirs:    test
-  build-depends:     base          >= 4
+  build-depends:     base            >= 4
     ,                hasnip
 
 executable hasnip
   default-language:  Haskell2010
   ghc-options:       -Wall
+
   main-is:           Main.hs
+
+  other-modules:     HaSnip.ClientGameMain
+    ,                HaSnip.Misc
+    ,                HaSnip.ServerList
+    ,                HaSnip.ServerList.BnSURLs
+
+
+
   hs-source-dirs:    src
-  build-depends:     base          >= 4
-    ,                text          >= 0.11
-    ,                network       >= 2.4
-    ,                cpu           >= 0.1
-    ,                aeson         >= 0.6
-    ,                url           >= 2.1
+  build-depends:     base            >= 4
+    ,                bytestring      >= 0.10
+    ,                text            >= 0.11
+    ,                network         >= 2.4
+    ,                aeson           >= 0.6
+    ,                typesafe-endian == 0.1.*
+    ,                henet           == 1.3.8.*
