--- a/hasnip.cabal
+++ b/hasnip.cabal
@@ -41,4 +41,4 @@ executable hasnip
     ,                network         >= 2.4
     ,                aeson           >= 0.6
     ,                typesafe-endian == 0.1.*
-    ,                henet           == 1.3.8.*
+    ,                henet           >= 1.3.8.1.1 && == 1.3.8.*
