--- a/hasnip.cabal
+++ b/hasnip.cabal
@@ -29,9 +29,6 @@ executable hasnip
 
   other-modules:     HaSnip.ClientGameMain
     ,                HaSnip.Misc
-    ,                HaSnip.ServerList
-    ,                HaSnip.ServerList.BnSURLs
-
 
 
   hs-source-dirs:    src
@@ -40,5 +37,6 @@ executable hasnip
     ,                text            >= 0.11
     ,                network         >= 2.4
     ,                aeson           >= 0.6
+    ,                HTTP            >= 4000.2
     ,                typesafe-endian == 0.1.*
     ,                henet           >= 1.3.8.1.1 && == 1.3.8.*
