--- a/hasnip.cabal
+++ b/hasnip.cabal
@@ -24,16 +24,11 @@ Test-suite hasnip-test
 executable hasnip
   default-language:  Haskell2010
   ghc-options:       -Wall
-
   main-is:           Main.hs
-
-  other-modules:     HaSnip.ClientGameMain
-    ,                HaSnip.Misc
-
-
   hs-source-dirs:    src
   build-depends:     base            >= 4
     ,                bytestring      >= 0.10
+    ,                bitset          >= 1.4.7
     ,                text            >= 0.11
     ,                network         >= 2.4
     ,                aeson           >= 0.6
