--- a/hasnip.cabal
+++ b/hasnip.cabal
@@ -29,9 +29,12 @@ executable hasnip
   build-depends:     base            >= 4
     ,                bytestring      >= 0.10
     ,                bitset          >= 1.4.7
+    ,                containers      >= 0.5.0
     ,                text            >= 0.11
     ,                network         >= 2.4
     ,                aeson           >= 0.6
     ,                HTTP            >= 4000.2
     ,                typesafe-endian == 0.1.*
-    ,                henet           >= 1.3.8.2 && == 1.3.8.*
+    ,                henet           >= 1.3.9.3 && == 1.3.9.*
+                      -- only for ConstraintKinds
+    ,                ghc-prim
